--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/mailer": "6.3.*",
         "symfony/runtime": "6.3.*",
         "symfony/security-bundle": "6.3.*",
+        "symfony/translation": "6.3.*",
         "symfony/twig-bundle": "6.3.*",
         "symfony/validator": "6.3.*",
         "symfony/webpack-encore-bundle": "^2.1",
